[fix: #243] Add column wrapping

--- a/src/_atgrid.scss
+++ b/src/_atgrid.scss
@@ -50,6 +50,14 @@
   [#{$prefix}grid~="no-collapse"] { flex-flow: row nowrap; }
 
   //
+  // Column wrapping
+  //
+
+  [#{$prefix}grid~="wrap"] { flex-wrap: wrap; }
+  [#{$prefix}grid~="no-wrap"] { flex-wrap: nowrap; }
+  [#{$prefix}grid~="wrap-reverse"] { flex-wrap: wrap-reverse; }
+
+  //
   // Direction of columns in a row
   //
 
